y.output

state 0
	$accept: .all $end 
	vars: .    (2)

	.  reduce 2 (src line 49)

	all  goto 1
	vars  goto 2

state 1
	$accept:  all.$end 

	$end  accept
	.  error


state 2
	all:  vars.blocks tEOF 
	vars:  vars.tVAR tIDENT '=' expr 
	blocks: .    (4)

	tVAR  shift 4
	.  reduce 4 (src line 53)

	blocks  goto 3

state 3
	all:  vars blocks.tEOF 
	blocks:  blocks.block 

	tIDENT  shift 7
	tEOF  shift 5
	.  error

	block  goto 6

state 4
	vars:  vars tVAR.tIDENT '=' expr 

	tIDENT  shift 8
	.  error


state 5
	all:  vars blocks tEOF.    (1)

	.  reduce 1 (src line 41)


state 6
	blocks:  blocks block.    (5)

	.  reduce 5 (src line 54)


state 7
	block:  tIDENT.tSTR '{' fields '}' 

	tSTR  shift 9
	.  error


state 8
	vars:  vars tVAR tIDENT.'=' expr 

	'='  shift 10
	.  error


state 9
	block:  tIDENT tSTR.'{' fields '}' 

	'{'  shift 11
	.  error


state 10
	vars:  vars tVAR tIDENT '='.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 12
	bool_lit  goto 17

state 11
	block:  tIDENT tSTR '{'.fields '}' 
	fields: .    (7)

	.  reduce 7 (src line 65)

	fields  goto 24

state 12
	vars:  vars tVAR tIDENT '=' expr.    (3)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.':' tIDENT 

	':'  shift 29
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 3 (src line 50)


state 13
	expr:  tIDENT.    (9)
	expr:  tIDENT.'(' expr ')' 

	'('  shift 30
	.  reduce 9 (src line 68)


state 14
	expr:  tINT.    (10)

	.  reduce 10 (src line 70)


state 15
	expr:  tFLOAT.    (11)

	.  reduce 11 (src line 71)


state 16
	expr:  tSTR.    (12)

	.  reduce 12 (src line 72)


state 17
	expr:  bool_lit.    (13)

	.  reduce 13 (src line 73)


state 18
	expr:  '+'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 31
	bool_lit  goto 17

state 19
	expr:  '-'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 32
	bool_lit  goto 17

state 20
	expr:  tNOT.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 33
	bool_lit  goto 17

state 21
	expr:  '('.expr ')' 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 34
	bool_lit  goto 17

state 22
	bool_lit:  tTRUE.    (24)

	.  reduce 24 (src line 85)


state 23
	bool_lit:  tFALSE.    (25)

	.  reduce 25 (src line 87)


state 24
	block:  tIDENT tSTR '{' fields.'}' 
	fields:  fields.tIDENT '=' expr 

	'}'  shift 35
	tIDENT  shift 36
	.  error


state 25
	expr:  expr '+'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 37
	bool_lit  goto 17

state 26
	expr:  expr '-'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 38
	bool_lit  goto 17

state 27
	expr:  expr '*'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 39
	bool_lit  goto 17

state 28
	expr:  expr '/'.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 40
	bool_lit  goto 17

state 29
	expr:  expr ':'.tIDENT 

	tIDENT  shift 41
	.  error


state 30
	expr:  tIDENT '('.expr ')' 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 42
	bool_lit  goto 17

state 31
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  '+' expr.    (18)
	expr:  expr.':' tIDENT 

	.  reduce 18 (src line 78)


state 32
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  '-' expr.    (19)
	expr:  expr.':' tIDENT 

	.  reduce 19 (src line 79)


state 33
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  tNOT expr.    (20)
	expr:  expr.':' tIDENT 

	.  reduce 20 (src line 80)


state 34
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  '(' expr.')' 
	expr:  expr.':' tIDENT 

	')'  shift 43
	':'  shift 29
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  error


state 35
	block:  tIDENT tSTR '{' fields '}'.    (6)

	.  reduce 6 (src line 56)


state 36
	fields:  fields tIDENT.'=' expr 

	'='  shift 44
	.  error


state 37
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (14)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.':' tIDENT 

	'*'  shift 27
	'/'  shift 28
	.  reduce 14 (src line 74)


state 38
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (15)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.':' tIDENT 

	'*'  shift 27
	'/'  shift 28
	.  reduce 15 (src line 75)


state 39
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (16)
	expr:  expr.'/' expr 
	expr:  expr.':' tIDENT 

	.  reduce 16 (src line 76)


state 40
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (17)
	expr:  expr.':' tIDENT 

	.  reduce 17 (src line 77)


state 41
	expr:  expr ':' tIDENT.    (23)

	.  reduce 23 (src line 83)


state 42
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  tIDENT '(' expr.')' 
	expr:  expr.':' tIDENT 

	')'  shift 45
	':'  shift 29
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  error


state 43
	expr:  '(' expr ')'.    (21)

	.  reduce 21 (src line 81)


state 44
	fields:  fields tIDENT '='.expr 

	tINT  shift 14
	tFLOAT  shift 15
	tSTR  shift 16
	'('  shift 21
	tIDENT  shift 13
	tTRUE  shift 22
	tFALSE  shift 23
	'+'  shift 18
	'-'  shift 19
	tNOT  shift 20
	.  error

	expr  goto 46
	bool_lit  goto 17

state 45
	expr:  tIDENT '(' expr ')'.    (22)

	.  reduce 22 (src line 82)


state 46
	fields:  fields tIDENT '=' expr.    (8)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.':' tIDENT 

	':'  shift 29
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 8 (src line 66)


23 terminals, 8 nonterminals
26 grammar rules, 47/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 27/240000
29 extra closures
148 shift entries, 1 exceptions
17 goto entries
10 entries saved by goto default
Optimizer space used: output 58/240000
58 table entries, 0 zero
maximum spread: 23, maximum offset: 44
